--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption Application</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Dog Adoption Application</h1>
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" placeholder="Name"><br>
 
+        <label for="phone">Phone Number:</label>
+        <input type="text" id="phone" placeholder="Phone Number"><br>
+
+        <label for="address">Address:</label>
+        <input type="text" id="address" placeholder="Address"><br>
+
+        <label for="checkbox">
+            Have you ever lived with a Dog before?
+            <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+        </label><br>
+
+        <label for="multiSelect">Please select your preferred breeds:</label>
+        <select id="multiSelect" multiple>
+            <option value="Golden Retriever">Golden Retriever</option>
+            <option value="Labrador Retriever">Labrador Retriever</option>
+            <option value="German Shepherd">German Shepherd</option>
+            <option value="Beagle">Beagle</option>
+            <option value="Poodle">Poodle</option>
+        </select><br>
+
+        <input type="submit" id="submit" value="Submit">
+    </form>
 </body>
 
 </html>
